# jasmin-manage

./: .coveragerc  .gitignore  README.md  manage.py  pyproject.toml  requirements-core.txt  requirements-jasmin_auth.txt  requirements-tsunami.txt  requirements.txt  setup.cfg  setup.py  setup_data_jasmin_portal.sql  tox.ini
jasmin_manage/: __init__.py  apps.py  exceptions.py  notifications.py  settings.py  urls.py
jasmin_manage/admin/: __init__.py  category.py  collaborator.py  consortium.py  invitation.py  project.py  quota.py  requirement.py  resource.py  service.py  tag.py  util.py
jasmin_manage/management/commands/: pruneinvitations.py
jasmin_manage/migrations/: 0001_initial.py  0002_auto_20191129_1256.py  0002_resourcechunk.py  0003_auto_20200401_0831.py  0004_auto_20201012_1039.py  0004_auto_20201012_1039_squashed_0011_auto_20201029_2250.py  0005_auto_20201012_1611.py  0005_auto_20201209_1701.py  0006_auto_20201014_1057.py  0006_auto_20210203_1556.py  0006_auto_20210217_1529.py  0007_auto_20201023_1237.py  0007_auto_20210217_1530.py  0007_category_description.py  0008_auto_20210205_1513.py  0008_auto_20210217_1531.py  0008_collaborator_version.py  0009_auto_20201023_1346.py  0009_collaborator_created_at.py  0009_consortium_is_public.py  0010_auto_20201029_2243.py  0010_auto_20210324_1416.py  0011_auto_20210406_1356.py  0012_auto_20210412_1029.py  0013_requirement_location.py  0014_alter_requirement_location.py  0015_category_is_public.py  0016_auto_20231214_1542.py  0017_auto_20231219_1100.py  0018_alter_project_tags.py  0019_remove_tag_name.py  0020_tag_name.py  0021_alter_project_tags.py  0022_auto_20231219_1605.py  0023_alter_tag_name.py  0024_alter_tag_name.py  0025_tag_is_public.py  0026_alter_tag_options_remove_tag_is_public_and_more.py  0027_alter_project_name_alter_service_name.py  0028_consortium_fairshare.py  (+2 more)
jasmin_manage/models/: __init__.py  category.py  collaborator.py  comment.py  consortium.py  invitation.py  project.py  quota.py  requirement.py  resource.py  resource_chunk.py  service.py  tag.py
jasmin_manage/permissions/: __init__.py  base.py  collaborator.py  comment.py  consortium.py  invitation.py  project.py  requirement.py  service.py
jasmin_manage/serializers/: __init__.py  base.py  category.py  collaborator.py  comment.py  consortium.py  invitation.py  project.py  project_summaries.py  quota.py  read_only.py  requirement.py  resource.py  service.py  service_list.py  tag.py
jasmin_manage/static/css/admin/: highlight.css
jasmin_manage/static/js/admin/: highlight.js
jasmin_manage/templates/tsunami_notify/: layout.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/collaborator/created/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/collaborator/deleted/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/invitation/created/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/project/changes_requested/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/project/completed/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/project/submitted_for_provisioning/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/project/submitted_for_review/: message.txt  subject.txt
jasmin_manage/templates/tsunami_notify/jasmin_manage/requirement/provisioned/: message.txt  subject.txt
jasmin_manage/templatetags/: format_amount.py
jasmin_manage/tests/: settings.py  utils.py
jasmin_manage/tests/models/: test_category.py  test_collaborator.py  test_comment.py  test_consortium.py  test_invitation.py  test_project.py  test_quota.py  test_requirement.py  test_resource.py  test_resource_chunk.py  test_service.py  test_tag.py  utils.py
jasmin_manage/tests/serializers/: test_base_serializer.py  test_collaborator.py  test_comment.py  test_consortium.py  test_enum_field.py  test_invitation.py  test_links_field.py  test_project.py  test_quota.py  test_requirement.py  test_service.py  test_tag.py
jasmin_manage/tests/views/: test_category.py  test_collaborator.py  test_comment.py  test_consortium.py  test_invitation.py  test_project.py  test_requirement.py  test_resource.py  test_service.py  utils.py
jasmin_manage/views/: __init__.py  base.py  category.py  collaborator.py  comment.py  consortium.py  exception_handler.py  invitation.py  project.py  project_join.py  quota.py  requirement.py  resource.py  service.py  service_list.py  tag.py  user.py
jasmin_manage_site/: settings.py-local  urls.py  wsgi.py
