[tool.poetry]
name = "jasmin-manage"
version = "0.1.0"
description = "API for management of resources on JASMIN."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
maintainers = ["Matt Jones <matthew.j.jones@stfc.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cedadev/jasmin-manage"

packages = [
    { include = "jasmin_manage_site"},
    { include = "jasmin_manage"},
]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.1"
django = "~3.2.19"
markdown = "^3.3.4"
django-admin-list-filter-dropdown = "^1.0.3"
django-admin-rangefilter = "^0.8.1"
django-oauth-toolkit = "^2.2.0"
djangorestframework = "^3.12.4"
drf-spectacular = "^0.15.1"
drf-nested-routers = "^0.93.3"
jasmin-auth-django = {git = "https://github.com/cedadev/jasmin-auth-django.git", rev = "00dce9daedec543fb7fe87f33e408ac45782f8ed"}
django-tsunami = {git = "https://github.com/cedadev/django-tsunami.git", rev = "b4f0f4345a99229d268f37853568c0e630459988"}
django-tsunami-notify = {git = "https://github.com/cedadev/django-tsunami-notify.git", rev = "d9f1ae8b7de95bfb700bfe5127ec188e8aa6e574"}
django-settings-object = {git = "https://github.com/cedadev/django-settings-object.git", rev = "2b66c0fc5eae92972df5210b4bc43f7d95ad9ceb"}
django-debug-toolbar = "^3.2.1"

# Required for migrations for now.
django-markupfield = "^2.0.0"
django-concurrency = "^2.3"

# This is a dependency of django-tsumani.
# This is deprecated and can be removed once tsunami's packaging is fixed.
setuptools = "^69.1.1"

[tool.poetry.group.test.dependencies]
tblib = "^3.0.0"
pytest = "^8.0.1"
coverage = "^7.4.3"

[tool.poetry.group.dev.dependencies]
tox = "^4.12.1"
black = "^24.1.1"
isort = "^5.12.0"
pytest = "^8.0.1"
pylint-django = "^2.5.5"
coverage = "^7.4.3"

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = 'pylint_django'

[build-system]
requires = ["poetry-core", "setuptools>=59.6.0"]
build-backend = "poetry.core.masonry.api"
