[metadata]
name = jasmin-manage
description = API for management of resources on JASMIN.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@stfc.ac.uk
url = https://github.com/cedadev/jasmin-manage


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python-dateutil
    django
    markdown
    django-admin-list-filter-dropdown
    django-admin-rangefilter
    django-debug-toolbar
    djangorestframework
    drf-spectacular
    drf-nested-routers
    jasmin-auth-django
    django-tsunami
    django-tsunami-notify
    django-markupfield  # Required for migrations for now
    django-concurrency  # Required for migrations for now
